# OS_Cricket_Simulator

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: loader.hpp  match.hpp  match_context.hpp  player.hpp
src/: loader.cpp  main.cpp  match.cpp  player.cpp
stats/: england.txt  india.txt
